# DepthVista

./: README.md
SDK/Linux/Ubuntu18.04/x64/include/: DepthVista_enums.h
SDK/Linux/Ubuntu18.04/x64/so/: libDepthVistaSDK.so.1.0.1
SDK/Linux/Ubuntu20.04/x64/: install.sh
SDK/Linux/Ubuntu20.04/x64/include/: DepthVista.h
SDK/Linux/Ubuntu20.04/x64/so/: libDepthVistaSDK.so.1.0.1
SDK/Windows/Lib/: opencv_world420.lib
Source/: CMakeLists.txt  cameraproperties.cpp  cameraproperties.h  cameraproperties.ui  config.ini  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opengldisplay.cpp  opengldisplay.h  openglpcl.cpp  openglpcl.h
